# adventofcode-rs

./: Cargo.toml  README.md  build.rs
src/: config.rs  day.rs  init.rs  lib.rs  main.rs  run.rs
src/solutions/: day2.rs  day9.rs
