[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Kushagra Gupta <kushgpt08@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
structopt = "0.3.20"
reqwest = {version = "0.10.9", features = ["blocking", "gzip", "cookies"] }
color-eyre = "0.5.8"
dotenv = "0.15.0"
